--- a/css/sudoku.css
+++ b/css/sudoku.css
@@ -1,5 +1,11 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
 body{
-   background-color:lightgray;
+   background-color:rgb(211, 211, 211);
 }
 
 .sudoku{
@@ -7,6 +13,7 @@ body{
     border-collapse: collapse;
     margin-left: auto;
     margin-right: auto;
+    position: relative;
 }
 
 .sudoku tr{
@@ -32,11 +39,6 @@ body{
     text-align:center;
 }
 
-.test
-{
-    display: none;
-    text-align:center;
-}
 
 .loader {
     position: fixed;
@@ -44,7 +46,7 @@ body{
     top: 0;
     left: 0;
     width: 100%;
-    height: 50%;
+    height: 70%;
     background: rgba(255, 255, 255, 0);
     display: flex;
     justify-content: center;
@@ -52,7 +54,7 @@ body{
 }
 
 .loader > img {
-    width: 1000px;
+    width: 10000px;
 }
 
 .loader.hidden {
@@ -67,3 +69,65 @@ body{
     }
 }
 
+#time {
+    font-size: 25px;
+}
+  
+
+.img-play{
+    margin: 0px;
+    padding: 0px;
+    border: 0px;
+
+    height:50px;
+    width:50px;
+    margin-left:auto;
+    margin-right:auto;
+    margin-bottom:auto;
+    display: none;
+}
+
+.img-pause{
+    margin: 0px;
+    padding: 0px;
+    border: 0px;
+
+    height:50px;
+    width:50px;
+    margin-left:auto;
+    margin-right:auto;
+    margin-bottom:auto;
+}
+
+header {
+    text-align: center;
+    padding-bottom:25px;
+    margin: auto;
+}
+
+.timer{
+    float:left; display:inline; width: 49%;
+}
+
+.difficulty{
+    float:left; display:inline; width: 49%;
+}
+h1 {
+    text-align:center;
+}
+
+.time {
+ font-size: small;
+}
+
+.game-menu {
+    position: relative;
+    bottom: 5px;
+
+
+    justify-content:center;
+}
+
+.wrapper {
+    height: 100px;
+}
