--- a/css/sudoku.css
+++ b/css/sudoku.css
@@ -44,7 +44,7 @@ body{
 .loader {
     position: fixed;
     z-index: 99;
-    top: 0;
+    top: 140px;
     left: 0;
     width: 100%;
     height: 70%;
@@ -55,7 +55,7 @@ body{
 }
 
 .loader > img {
-    width: 10000px;
+    width: 200px;
 }
 
 .loader.hidden {
